# LS_ELAS

line_segment/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  line_segment
line_segment/src/: main.cpp
sineva_stereo/: CMakeLists.txt  package.xml
sineva_stereo/config/: node_setting.yml
sineva_stereo/elas/include/: descriptor.h  elas (copy).h  elas.h  stereo_match.h
sineva_stereo/elas/src/: descriptor.cpp  elas (copy).cpp  elas.cpp  stereo_match.cpp  triangle.cpp
sineva_stereo/launch/: sineva_stereo.launch
sineva_stereo/nodes/: sineva_stereo_node.cpp
sineva_stereo/tests/: test_pointcloud.cpp  test_support_points.cpp  test_time.cpp
sineva_stereo/tests/test_data/: ELAS_para.yml  test_setting.yml
sineva_stereo/utils/include/: orb_extractor.h  precomp.h  stereo_rectify.h
sineva_stereo/utils/src/: orb_extractor.cpp  stereo_rectify.cpp
